<resources>
    <string name="app_name">Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="title">Hangman</string>
    <string name="cur_word">Current Word:</string>
    <string name="word">Word Goes Here</string>
    <string name="guess">Guess</string>
    <string name="prompt">Guess a letter!\n(5 guesses left)</string>
    <string name="hint">Enter a letter or word</string>
    <string name="cont_desc">Image of hangman</string>
    <string name="new_game">New Game</string>
    <string name="custom">Custom Game</string>
</resources>